--- a/index.html
+++ b/index.html
@@ -1,25 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="description" content="기술 정보를 공유하고 있으며 개발 문화 발전에 이바지할 방법을 찾고 있는 개발자입니다.">
   <meta name="keywords" content="Developer, Backend, Frontend, Portfolio, 개발자스럽다">
-  <link rel="stylesheet" href="https://cdn.rawgit.com/Joungkyun/font-d2coding/master/d2coding.css" />
+  <link rel="stylesheet" href="https://cdn.rawgit.com/Joungkyun/font-d2coding/master/d2coding.css">
   <!-- <link rel="stylesheet" href="https://cdn.rawgit.com/tonsky/FiraCode/master/distr/fira_code.css" /> -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" integrity="sha384-3AB7yXWz4OeoZcPbieVW64vVXEwADiYyAEhwilzWsLw+9FgqpyjjStpPnpBO8o8S" crossorigin="anonymous">
-  <link rel="stylesheet" href="./assets/styles.css" />
-  <title>GAERAE.COM :: GAEBALJA SEUREOPDA</title>
+  <link rel="stylesheet" href="./assets/styles.css">
+  <link rel="icon" type="image/x-icon" href="./assets/favicon.ico">
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon-16x16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-touch-icon.png">
+  <link rel="manifest" href="./assets/site.webmanifest">
+  <link rel="mask-icon" href="./assets/safari-pinned-tab.svg" color="#282826">
+  <meta name="theme-color" content="#282826">
+
+  <meta property="og:image" content="./assets/og-image.jpg">
+  <meta property="og:image:width" content="279">
+  <meta property="og:image:height" content="279">
+  <meta property="og:title" content="GAERAE ● 개발자스럽다">
+  <meta property="og:url" content="http://gaerae.com">
+  <meta property="og:description" content="기술 정보를 공유하고 있으며 개발 문화 발전에 이바지할 방법을 찾고 있는 개발자입니다.">
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:title" content="GAERAE ● 개발자스럽다">
+  <meta name="twitter:description" content="기술 정보를 공유하고 있으며 개발 문화 발전에 이바지할 방법을 찾고 있는 개발자입니다." />
+  <meta name="twitter:image" content="./assets/og-image.jpg">
+  <title>GAERAE ● 개발자스럽다</title>
 </head>
 <body>
   <noscript>
     Please enable JavaScript to see this page!
   </noscript>
   <div class="zsh">
-    <div class="line"><span class="comment">################################</span></div>
-    <div class="line"><span class="comment"># WELCOM TO GAEBALJA SEUREOPDA #</span></div>
-    <div class="line"><span class="comment">################################</span></div>
+    <div class="line"><span class="comment">#################################</span></div>
+    <div class="line"><span class="comment"># WELCOME TO GAEBALJA SEUREOPDA #</span></div>
+    <div class="line"><span class="comment">#################################</span></div>
     <div class="line"><span>Last login: <span class="now"></span> from <span class="ip"></span></span></div>
     <div class="line">
       <span class="path">~/gaerae.com</span>
