--- a/404.html
+++ b/404.html
@@ -2,18 +2,25 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="robots" content="noindex" />
-  <meta http-equiv="refresh" content="5; url=//gaerae.com" />
-  <link rel="stylesheet" href="https://cdn.rawgit.com/tonsky/FiraCode/1.204/distr/fira_code.css"/>
-  <link rel="stylesheet" href="./assets/styles.css" />
-  <title>GAERAE.COM :: 404</title>
+  <meta name="robots" content="noindex">
+  <meta http-equiv="refresh" content="5; url=//gaerae.com">
+  <link rel="stylesheet" href="https://cdn.rawgit.com/tonsky/FiraCode/1.204/distr/fira_code.css">
+  <link rel="stylesheet" href="./assets/styles.css">
+  <link rel="icon" type="image/x-icon" href="./assets/favicon.ico">
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon-16x16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-touch-icon.png">
+  <link rel="manifest" href="./assets/site.webmanifest">
+  <link rel="mask-icon" href="./assets/safari-pinned-tab.svg" color="#282826">
+  <meta name="theme-color" content="#282826">
+  <title>GAERAE ● 404</title>
 </head>
 <body>
 
   <div class="line"><span class="comment">################################</span></div>
-  <div class="line"><span class="comment"># WELCOM TO GAEBALJA SEUREOPDA #</span></div>
+  <div class="line"><span class="comment"># WELCOME TO GAEBALJA SEUREOPDA #</span></div>
   <div class="line"><span class="comment">################################</span></div>
 
   <div class="line"><br /></div>
