--- a/404.html
+++ b/404.html
@@ -8,12 +8,11 @@
   <meta http-equiv="refresh" content="5; url=//gaerae.com">
   <link rel="stylesheet" href="https://cdn.rawgit.com/tonsky/FiraCode/1.204/distr/fira_code.css">
   <link rel="stylesheet" href="./assets/styles.css">
-  <link rel="icon" type="image/x-icon" href="./assets/favicon.ico">
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon-16x16.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./assets/logo-16.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/logo-32.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="./assets/logo-180.png">
   <link rel="manifest" href="./assets/site.webmanifest">
-  <link rel="mask-icon" href="./assets/safari-pinned-tab.svg" color="#282826">
+  <link rel="mask-icon" href="./assets/logo.svg" color="#282826">
   <meta name="theme-color" content="#282826">
   <title>GAERAE ● 404</title>
 </head>
