--- a/index.html
+++ b/index.html
@@ -10,12 +10,11 @@
   <!-- <link rel="stylesheet" href="https://cdn.rawgit.com/tonsky/FiraCode/master/distr/fira_code.css" /> -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" integrity="sha384-3AB7yXWz4OeoZcPbieVW64vVXEwADiYyAEhwilzWsLw+9FgqpyjjStpPnpBO8o8S" crossorigin="anonymous">
   <link rel="stylesheet" href="./assets/styles.css">
-  <link rel="icon" type="image/x-icon" href="./assets/favicon.ico">
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon-16x16.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./assets/logo-16.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/logo-32.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="./assets/logo-180.png">
   <link rel="manifest" href="./assets/site.webmanifest">
-  <link rel="mask-icon" href="./assets/safari-pinned-tab.svg" color="#282826">
+  <link rel="mask-icon" href="./assets/logo.svg" color="#282826">
   <meta name="theme-color" content="#282826">
 
   <meta property="og:image" content="./assets/og-image.jpg">
