--- a/404.html
+++ b/404.html
@@ -10,17 +10,13 @@
   <link rel="stylesheet" href="./assets/styles.css">
   <link rel="icon" type="image/png" sizes="16x16" href="./assets/logo-16.png">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/logo-32.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="./assets/logo-180.png">
-  <link rel="manifest" href="./assets/site.webmanifest">
-  <link rel="mask-icon" href="./assets/logo.svg" color="#282826">
-  <meta name="theme-color" content="#282826">
   <title>GAERAE ● 404</title>
 </head>
 <body>
 
-  <div class="line"><span class="comment">################################</span></div>
+  <div class="line"><span class="comment">#################################</span></div>
   <div class="line"><span class="comment"># WELCOME TO GAEBALJA SEUREOPDA #</span></div>
-  <div class="line"><span class="comment">################################</span></div>
+  <div class="line"><span class="comment">#################################</span></div>
 
   <div class="line"><br /></div>
 
