--- a/index.html
+++ b/index.html
@@ -17,16 +17,15 @@
   <link rel="mask-icon" href="./assets/logo.svg" color="#282826">
   <meta name="theme-color" content="#282826">
 
-  <meta property="og:image" content="./assets/og-image.jpg">
+  <meta property="og:image" content="./assets/logo-384.png">
   <meta property="og:image:width" content="279">
   <meta property="og:image:height" content="279">
   <meta property="og:title" content="GAERAE ● 개발자스럽다">
   <meta property="og:url" content="http://gaerae.com">
   <meta property="og:description" content="기술 정보를 공유하고 있으며 개발 문화 발전에 이바지할 방법을 찾고 있는 개발자입니다.">
   <meta name="twitter:card" content="summary">
-  <meta name="twitter:title" content="GAERAE ● 개발자스럽다">
-  <meta name="twitter:description" content="기술 정보를 공유하고 있으며 개발 문화 발전에 이바지할 방법을 찾고 있는 개발자입니다." />
-  <meta name="twitter:image" content="./assets/og-image.jpg">
+  <meta name="twitter:site" content="@gaeraecom">
+  <script type='application/ld+json'>{"@context":"http://schema.org","@type":"Person","name":"GAERAE ● 개발자스럽다","url":"http://gaerae.com","sameAs":["https://blog.gaerae.com","https://www.facebook.com/gaeraecom","https://twitter.com/gaeraecom","https://www.linkedin.com/in/gaerae","https://www.instagram.com/gaeraecom","https://pf.kakao.com/_cxlzYu","https://www.pinterest.co.kr/gaeraecom/","https://plus.google.com/+gaeraecom","https://youtube.com/gaeraecom","https://disco.me/users/00241f10-64cd-11e7-9778-000000007b48"]}</script>
   <title>GAERAE ● 개발자스럽다</title>
 </head>
 <body>
