--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <link rel="mask-icon" href="./assets/logo.svg" color="#282826">
   <meta name="theme-color" content="#282826">
 
-  <meta property="og:image" content="./assets/logo-384.png">
+  <meta property="og:image" content="http://gaerae.com/assets/logo-384.png">
   <meta property="og:image:width" content="279">
   <meta property="og:image:height" content="279">
   <meta property="og:title" content="GAERAE ● 개발자스럽다">
