--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <div class="line"><span class="white-space space"></span><span class="white-space space"></span>
       { daily: [ '<span class="string"><a href="https://facebook.com/gaeraecom" title="Facebook"><i class="fab fa-facebook"></i></a></span>',
       '<span class="string"><a href="https://twitter.com/gaeraecom" title="Twitter"><i class="fab fa-twitter"></i></a></span>',
-      '<span class="string"><a href="https://gaeraecom.slack.com" title="Slack"><i class="fab fa-slack"></i></a></span>',
+      '<span class="string"><a href="https://goo.gl/cMRNih" title="Slack"><i class="fab fa-slack"></i></a></span>',
       '<span class="string"><a href="https://www.linkedin.com/in/gaerae/detail/recent-activity" title="LinkedIn"><i class="fab fa-linkedin"></i></a></span>',
       '<span class="string"><a href="https://pf.kakao.com/_cxlzYu" title="KakaoTalk"><i class="fas fa-comment"></i></a></span>',
       '<span class="string"><a href="https://disco.me/users/00241f10-64cd-11e7-9778-000000007b48" title="Disco"><i class="fas fa-circle"></i></a></span>',
