--- a/404.html
+++ b/404.html
@@ -11,6 +11,13 @@
   <link rel="icon" type="image/png" sizes="16x16" href="./assets/logo-16.png">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/logo-32.png">
   <title>GAERAE ● 404</title>
+  <script async='async' src='https://www.googletagmanager.com/gtag/js?id=UA-43146612-1'></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'UA-43146612-1');
+  </script>
 </head>
 <body>
 
@@ -22,14 +29,5 @@
 
   <div class="line"><span class="comment">// Page redirect after 5 seconds</span></div>
   <div class="line"><span class="variable">404</span><span class="keyword"> = </span>Not Found</div>
-
-  <script type="text/javascript">
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-    ga('create', 'UA-48811768-1', 'auto');
-    ga('send', 'pageview');
-  </script>
 </body>
 </html>
