--- a/index.html
+++ b/index.html
@@ -17,17 +17,24 @@
   <link rel="mask-icon" href="./assets/logo.svg" color="#282826">
   <meta name="theme-color" content="#282826">
 
-  <meta property="og:image" content="http://gaerae.com/assets/og-image.png">
+  <meta property="og:image" content="https://gaerae.com/assets/og-image.png">
   <meta property="og:title" content="GAERAE ● 개발자스럽다">
-  <meta property="og:url" content="http://gaerae.com">
+  <meta property="og:url" content="https://gaerae.com">
   <meta property="og:description" content="기술 정보를 공유하고 있으며 개발 문화 발전에 이바지할 방법을 찾고 있는 개발자입니다.">
   <meta property='fb:app_id' content='1655334918054177'>
   <meta property='fb:admins' content='100001502966940'>
   <meta name="twitter:card" content="summary">
   <meta name="twitter:site" content="@gaeraecom">
   <meta name='twitter:creator' content='@gaeraecom'>
-  <script type='application/ld+json'>{"@context":"http://schema.org","@type":"Person","name":"GAERAE ● 개발자스럽다","url":"http://gaerae.com","sameAs":["https://blog.gaerae.com","https://www.facebook.com/gaeraecom","https://twitter.com/gaeraecom","https://www.linkedin.com/in/gaerae","https://www.instagram.com/gaeraecom","https://pf.kakao.com/_cxlzYu","https://www.pinterest.co.kr/gaeraecom/","https://plus.google.com/+gaeraecom","https://youtube.com/gaeraecom","https://disco.me/users/00241f10-64cd-11e7-9778-000000007b48"]}</script>
+  <script type='application/ld+json'>{"@context":"https://schema.org","@type":"Person","name":"GAERAE ● 개발자스럽다","url":"https://gaerae.com","sameAs":["https://blog.gaerae.com","https://www.facebook.com/gaeraecom","https://twitter.com/gaeraecom","https://www.linkedin.com/in/gaerae","https://www.instagram.com/gaeraecom","https://pf.kakao.com/_cxlzYu","https://www.pinterest.co.kr/gaeraecom/","https://plus.google.com/+gaeraecom","https://youtube.com/gaeraecom","https://disco.me/users/00241f10-64cd-11e7-9778-000000007b48"]}</script>
   <title>GAERAE ● 개발자스럽다</title>
+  <script async='async' src='https://www.googletagmanager.com/gtag/js?id=UA-43146612-1'></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'UA-43146612-1');
+  </script>
 </head>
 <body>
   <noscript>
@@ -92,12 +99,12 @@
 
     <div class="line"><span class="white-space space"></span><span class="white-space space"></span>
       { name: <span class="string">'FFeed - Facebook feed'</span>,
-      urls: [ <span class="string">'<a href="http://github.com/gaerae/ffeed" title="Github"><i class="fab fa-github"></i></a>'</span>, <span class="string">'<a href="http://gaerae.com/ffeed" title="Website"><i class="fas fa-globe"></i></a>'</span> ] },
+      urls: [ <span class="string">'<a href="https://github.com/gaerae/ffeed" title="Github"><i class="fab fa-github"></i></a>'</span>, <span class="string">'<a href="https://gaerae.com/ffeed" title="Website"><i class="fas fa-globe"></i></a>'</span> ] },
     </div>
 
     <div class="line"><span class="white-space space"></span><span class="white-space space"></span>
       { name: <span class="string">'Awesome Algorithms'</span>,
-      urls: [ <span class="string">'<a href="http://github.com/gaerae/awesome-algorithms" title="Github"><i class="fab fa-github"></i></a>'</span>, <span class="string">'<a href="http://gaerae.com/awesome-algorithms" title="Website"><i class="fas fa-globe"></i></a>'</span> ] },
+      urls: [ <span class="string">'<a href="https://github.com/gaerae/awesome-algorithms" title="Github"><i class="fab fa-github"></i></a>'</span>, <span class="string">'<a href="https://gaerae.com/awesome-algorithms" title="Website"><i class="fas fa-globe"></i></a>'</span> ] },
     </div>
     <div class="line">];</div>
 
@@ -144,13 +151,6 @@
       'font-family: "Fira Code", monospace; padding: 2px 0; background-color: #2E8CCF; color: #000000;',
       'color: #000000;'
     );
-
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-    ga('create', 'UA-48811768-1', 'auto');
-    ga('send', 'pageview');
   </script>
 </body>
 </html>
