--- a/index.html
+++ b/index.html
@@ -104,13 +104,13 @@
     </div>
     
     <div class="line"><span class="white-space space"></span><span class="white-space space"></span>
-      { name: <span class="string">'FFeed - Facebook feed'</span>,
-      urls: [ <span class="string">'<a href="https://github.com/gaerae/ffeed" title="Github"><i class="fab fa-github"></i></a>'</span>, <span class="string">'<a href="https://gaerae.com/ffeed" title="Website"><i class="fas fa-globe"></i></a>'</span> ] },
-    </div>
-
-    <div class="line"><span class="white-space space"></span><span class="white-space space"></span>
       { name: <span class="string">'Facebook Contest Winner'</span>,
       urls: [ <span class="string">'<a href="https://github.com/gaerae/facebook-contest-winner" title="Github"><i class="fab fa-github"></i></a>'</span>, <span class="string">'<a href="https://gaerae.com/facebook-contest-winner" title="Website"><i class="fas fa-globe"></i></a>'</span> ] },
+    </div>
+    
+    <div class="line"><span class="white-space space"></span><span class="white-space space"></span>
+      { name: <span class="string">'Awesome Algorithms'</span>,
+      urls: [ <span class="string">'<a href="https://github.com/gaerae/awesome-algorithms" title="Github"><i class="fab fa-github"></i></a>'</span>, <span class="string">'<a href="https://gaerae.com/awesome-algorithms" title="Website"><i class="fas fa-globe"></i></a>'</span> ] },
     </div>
     <div class="line">];</div>
 
