--- a/404.html
+++ b/404.html
@@ -1,33 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="robots" content="noindex">
-  <meta http-equiv="refresh" content="5; url=//gaerae.com">
-  <link rel="stylesheet" href="https://cdn.rawgit.com/tonsky/FiraCode/1.204/distr/fira_code.css">
-  <link rel="stylesheet" href="./assets/styles.css">
-  <link rel="icon" type="image/png" sizes="16x16" href="./assets/logo-16.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/logo-32.png">
-  <title>GAERAE ● 404</title>
-  <script async='async' src='https://www.googletagmanager.com/gtag/js?id=UA-43146612-1'></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
     gtag('config', 'UA-43146612-1');
   </script>
+  <title>File Not Found</title>
+  <meta http-equiv="content-type" content="text/html; charset=utf-8" >
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="robots" content="noindex">
+  <meta http-equiv="refresh" content="5; url=//gaerae.com">
+  <style type="text/css">
+    body {
+      background-color: #eee;
+    }
+
+    body, h1, p {
+      font-family: "Helvetica Neue", "Segoe UI", Segoe, Helvetica, Arial, "Lucida Grande", sans-serif;
+      font-weight: normal;
+      margin: 0;
+      padding: 0;
+      text-align: center;
+    }
+
+    .container {
+      margin-left:  auto;
+      margin-right:  auto;
+      margin-top: 177px;
+      max-width: 1170px;
+      padding-right: 15px;
+      padding-left: 15px;
+    }
+
+    .row:before, .row:after {
+      display: table;
+      content: " ";
+    }
+
+    .col-md-6 {
+      width: 50%;
+    }
+
+    .col-md-push-3 {
+      margin-left: 25%;
+    }
+
+    h1 {
+      font-size: 48px;
+      font-weight: 300;
+      margin: 0 0 20px 0;
+    }
+
+    .lead {
+      font-size: 21px;
+      font-weight: 200;
+      margin-bottom: 20px;
+    }
+
+    p {
+      margin: 0 0 10px;
+    }
+
+    a {
+      color: #3282e6;
+      text-decoration: none;
+    }
+  </style>
 </head>
+
 <body>
+<div class="container text-center" id="error">
+  <svg height="100" width="100">
+    <polygon points="50,25 17,80 82,80" stroke-linejoin="round" style="fill:none;stroke:#ff8a00;stroke-width:8" />
+    <text x="42" y="74" fill="#ff8a00" font-family="sans-serif" font-weight="900" font-size="42px">!</text>
+  </svg>
+  <div class="row">
+    <div class="col-md-12">
+      <div class="main-icon text-warning"><span class="uxicon uxicon-alert"></span></div>
+      <h1>File not found (404 error)</h1>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-6 col-md-push-3">
+      <p class="lead">If you think what you're looking for should be here, please contact the site owner.</p>
+      <p class="lead">Page redirect after 5 seconds</p>
+    </div>
+  </div>
+</div>
 
-  <div class="line"><span class="comment">#################################</span></div>
-  <div class="line"><span class="comment"># WELCOME TO GAEBALJA SEUREOPDA #</span></div>
-  <div class="line"><span class="comment">#################################</span></div>
-
-  <div class="line"><br /></div>
-
-  <div class="line"><span class="comment">// Page redirect after 5 seconds</span></div>
-  <div class="line"><span class="variable">404</span><span class="keyword"> = </span>Not Found</div>
 </body>
 </html>
