--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <script async='async' src='https://www.googletagmanager.com/gtag/js?id=UA-43146612-1'></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-43146612-2"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-    gtag('config', 'UA-43146612-1');
+    gtag('config', 'UA-43146612-2');
   </script>
   <title>GAERAE | Developer</title>
 
@@ -65,10 +65,10 @@
 
   <div id="intro">
     <div class="container">
-      <h1>
-        Hey, <span id="messageIP"></span>!<br />😃<br />
-        Sit back, relax and enjoy the read.
-      </h1>
+      <h1>Hey! Hey! Hey!</h1>
+      <h1>😃</h1>
+      <h1>Sit back, relax and enjoy the read.</h1>
+      <p>앉아서 긴장을 풀고 즐겁게 보세요.</p>
     </div>
   </div>
   <div id="scrollDown">
@@ -100,9 +100,7 @@
         </div>
         <div class="skillDesc">
           <h3 class="skillTitle">Software Development</h3>
-          <p>
-            Creating awesome projects is my passion. I have been working as a software developer for more than 13 years.
-          </p>
+          <p>정보 공유와 개발 문화에 관심이 많으며, 재미있는 제품을 만드는 소프트웨어 개발자로 일하고 있습니다.</p>
         </div>
       </div>
       <!-- end development skill -->
@@ -116,10 +114,8 @@
         </div>
         <div class="skillDesc">
           <h3 class="skillTitle">Leadership</h3>
-          <p>
-            If your actions inspire others to dream more, learn more, do more and become more, you are a leader. - American statesman John Quincy Adams
+          <p>다른 사람들에게 더 많은 것을 꿈꾸고, 배우고, 행동할 수 있는 영감을 불어넣는 사람이 되려고 노력합니다.</p>
         </div>
-        </p>
       </div>
     </div>
     <!-- end leadership skill -->
@@ -158,7 +154,7 @@
             </div>
             <div class="aProjectsLightBoxCon">
               <div class="thumb">
-                <img alt="thumb"src="assets/projects-gaeraecom.png">
+                <img alt="thumb"src="assets/projects/gaeraecom.png">
               </div>
               <div class="postBody">
                 <div class="postTop">
