--- a/404.html
+++ b/404.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-43146612-2"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-    gtag('config', 'UA-43146612-1');
+    gtag('config', 'UA-43146612-2');
   </script>
   <title>File Not Found</title>
   <meta http-equiv="content-type" content="text/html; charset=utf-8" >
