--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
   <div id="scrollDown">
     <a href="#skills">
       <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="28px" height="29px" viewBox="0 0 28 29">
-        <polygon class="st0" points="14.273,28.424 0.497,14.647 2.618,12.526 14.273,24.182 25.962,12.493 28.083,14.614 		"/>
-        <polygon class="st0" points="14.273,16.387 0.497,2.61 2.618,0.489 14.273,12.145 25.962,0.456 28.083,2.577 		"/>
+        <polygon class="st0" points="14.273,28.424 0.497,14.647 2.618,12.526 14.273,24.182 25.962,12.493 28.083,14.614"/>
+        <polygon class="st0" points="14.273,16.387 0.497,2.61 2.618,0.489 14.273,12.145 25.962,0.456 28.083,2.577"/>
       </svg>
     </a>
   </div>
@@ -160,16 +160,17 @@
                 <div class="postTop">
                   <h1>개발자스럽다</h1>
                   <div class="livePreviewLink">
-                    <a target="_blank" href="https://blog.gaerae.com">Live Preview</a>
+                    <a target="_blank" href="https://blog.gaerae.com">Visit Blog</a>
                   </div>
                 </div>
                 <div class="psotDis">
                   <p>
-                    블로그와 SNS에서 주기적으로 기술 정보를 찾고 분류하여 가치를 더해 공유합니다.
+                    블로그와 소셜 미디어에서 기술 정보를 찾고 분류하여 가치를 더해 공유합니다.
                   </p>
                 </div>
 
                 <div class="postFooter">
+                  <h3>Related keywords</h3>
                   <div class="postSkills">
                     <span class="aPostSkill"><a href="https://blog.gaerae.com" title="Blog">Blog</a></span>
                     <span class="aPostSkill"><a href="https://facebook.com/gaeraecom" title="Facebook">Facebook</a></span>
@@ -178,7 +179,6 @@
                     <span class="aPostSkill"><a href="https://www.linkedin.com/in/gaerae/detail/recent-activity" title="LinkedIn">LinkedIn</a></span>
                     <span class="aPostSkill"><a href="https://pf.kakao.com/_cxlzYu" title="KakaoTalk">KakaoTalk</a></span>
                     <span class="aPostSkill"><a href="https://disco.me/users/00241f10-64cd-11e7-9778-000000007b48" title="Disco">Disco</a></span>
-                    <span class="aPostSkill"><a href="https://plus.google.com/+gaeraecom" title="Google+">Google+</a></span>
                     <span class="aPostSkill"><a href="https://www.pinterest.co.kr/gaeraecom" title="Pinterest">Pinterest</a></span>
                     <span class="aPostSkill"><a href="https://youtube.com/gaeraecom" title="Youtube">Youtube</a></span>
                     <span class="aPostSkill"><a href="https://www.instagram.com/gaeraecom" title="Instagram">Instagram</a></span>
@@ -224,7 +224,7 @@
                 <div class="postTop">
                   <h1>JIRA Subtask Sortable</h1>
                   <div class="livePreviewLink">
-                    <a target="_blank" href="https://chrome.google.com/webstore/detail/jira-subtask-sortable/hcidkmckdnbkbjghgcgeikdoljdhlimb">Live Preview</a>
+                    <a target="_blank" href="https://chrome.google.com/webstore/detail/jira-subtask-sortable/hcidkmckdnbkbjghgcgeikdoljdhlimb">Visit GitHub</a>
                   </div>
                 </div>
                 <div class="psotDis">
@@ -234,6 +234,7 @@
                 </div>
 
                 <div class="postFooter">
+                  <h3>Related keywords</h3>
                   <div class="postSkills">
                     <span class="aPostSkill"><a href="https://chrome.google.com/webstore/detail/jira-subtask-sortable/hcidkmckdnbkbjghgcgeikdoljdhlimb" title="Chrome Web Store">Chrome Web Store</a></span>
                     <span class="aPostSkill"><a href="https://github.com/gaerae/jira-subtask-sortable" title="GitHub">GitHub</a></span>
@@ -279,7 +280,7 @@
                 <div class="postTop">
                   <h1>FFeed - Facebook feed</h1>
                   <div class="livePreviewLink">
-                    <a target="_blank" href="https://github.com/gaerae/ffeed">Live Preview</a>
+                    <a target="_blank" href="https://github.com/gaerae/ffeed">Visit GitHub</a>
                   </div>
                 </div>
                 <div class="psotDis">
@@ -289,8 +290,9 @@
                 </div>
 
                 <div class="postFooter">
+                  <h3>Related keywords</h3>
                   <div class="postSkills">
-                    <span class="aPostSkill"><a href="https://gaerae.com/ffeed" title="Homepage">Homepage</a></span>
+                    <span class="aPostSkill"><a href="https://gaerae.com/ffeed" title="Website">Website</a></span>
                     <span class="aPostSkill"><a href="https://github.com/gaerae/ffeed" title="GitHub">GitHub</a></span>
                   </div>
                 </div>
@@ -334,7 +336,7 @@
                 <div class="postTop">
                   <h1>Facebook Contest Winner</h1>
                   <div class="livePreviewLink">
-                    <a target="_blank" href="https://github.com/gaerae/facebook-contest-winner">Live Preview</a>
+                    <a target="_blank" href="https://github.com/gaerae/facebook-contest-winner">Visit GitHub</a>
                   </div>
                 </div>
                 <div class="psotDis">
@@ -344,8 +346,9 @@
                 </div>
 
                 <div class="postFooter">
+                  <h3>Related keywords</h3>
                   <div class="postSkills">
-                    <span class="aPostSkill"><a href="https://gaerae.com/facebook-contest-winner/" title="Homepage">Homepage</a></span>
+                    <span class="aPostSkill"><a href="https://gaerae.com/facebook-contest-winner/" title="Website">Website</a></span>
                     <span class="aPostSkill"><a href="https://github.com/gaerae/facebook-contest-winner" title="GitHub">GitHub</a></span>
                   </div>
                 </div>
@@ -389,7 +392,7 @@
                 <div class="postTop">
                   <h1>Awesome Algorithms</h1>
                   <div class="livePreviewLink">
-                    <a target="_blank" href="https://github.com/gaerae/awesome-algorithms">Live Preview</a>
+                    <a target="_blank" href="https://github.com/gaerae/awesome-algorithms">Visit GitHub</a>
                   </div>
                 </div>
                 <div class="psotDis">
@@ -399,8 +402,9 @@
                 </div>
 
                 <div class="postFooter">
+                  <h3>Related keywords</h3>
                   <div class="postSkills">
-                    <span class="aPostSkill"><a href="https://gaerae.com/awesome-algorithms" title="Homepage">Homepage</a></span>
+                    <span class="aPostSkill"><a href="https://gaerae.com/awesome-algorithms" title="Website">Website</a></span>
                     <span class="aPostSkill"><a href="https://github.com/gaerae/awesome-algorithms" title="GitHub">GitHub</a></span>
                   </div>
                 </div>
